# arabic-dialect-classifier

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
app/: main.py  schemas.py
app/static/: index.html
notebooks/: 01_eda_modeling.ipynb  01_eda_modeling_clean.ipynb
src/: config.py  preprocess.py  regex_baseline.py  train.py
