[project]
name = "arabic-dialect-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=5.0.0",
    "dvc>=3.67.1",
    "dvc-gdrive>=3.0.1",
    "fastapi>=0.136.3",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mlflow>=3.13.0",
    "numpy>=2.4.6",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "pandas-stubs>=3.0.3.260530",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "ruff>=0.15.16",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.basedpyright]

include = ["app"] # not touching the notebook and whatnot
